# husako

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  gaji.config.ts  husako.toml  release-plz.toml  tsconfig.json
.claude/: PLAN.md  architecture.md  builder-spec.md  cli-design.md  coding-guidelines.md  docs-guidelines.md  dsl-spec.md  lock-file.md  lsp-spec.md  plugin-spec.md  quantity-grammar.md  release-guide.md  testing.md  validation-engine.md
.claude/plans/: breezy-orbiting-pearl.md  cheerful-purring-hennessy.md  cuddly-booping-tulip.md  jazzy-sprouting-puffin.md  linear-dazzling-wirth.md  logical-skipping-flask.md  lovely-shimmying-sparrow.md  lucky-exploring-comet.md  m1-basic-render.md  m11-builder-first-dsl.md  m12-real-spec-testing.md  m13-husako-toml.md  m14-rename-generate.md  m15-helm-values-schema.md  m16-m21-cli-usability.md  m22-colored-output.md  m23-search-interactive.md  m24-cli-design.md  m25-chart-add-ui.md  m3-runtime-sdk.md  m5-type-generation.md  milestone-10-generic-builder.md  milestone-2-module-loader.md  milestone-4-openapi-fetch.md  milestone-6-quantity-validation.md  milestone-7-schema-validation.md  milestone-8-dynamic-k8s.md  milestone-9-husako-new.md  reactive-wiggling-bird.md  serialized-popping-robin.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  bench.yml  check.yml  distribute.yml  docs-deploy.yml  docs-release.yml  sync-workflows.yml  version.yml
crates/husako-bench/: Cargo.toml
crates/husako-bench/benches/: compile.rs  emit.rs  execute.rs  generate.rs  render.rs
crates/husako-bench/fixtures/: husako.toml
crates/husako-bench/src/: lib.rs
crates/husako-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/husako-cli/src/: interactive.rs  main.rs  name_version_select.rs  progress.rs  search_select.rs  style.rs  text_input.rs  theme.rs  url_detect.rs
crates/husako-cli/tests/: e2e_a.rs  e2e_b.rs  e2e_c.rs  e2e_d.rs  e2e_e.rs  e2e_f.rs  e2e_g.rs  generate_output.rs  integration.rs  real_spec_e2e.rs  watch.rs
crates/husako-cli/tests/e2e_common/: mod.rs
crates/husako-cli/tests/snapshots/: integration__render_basic_yaml_snapshot.snap  integration__render_canonical_snapshot.snap  integration__render_project_snapshot.snap
crates/husako-compile-oxc/: Cargo.toml
crates/husako-compile-oxc/src/: lib.rs
crates/husako-config/: CHANGELOG.md  Cargo.toml
crates/husako-config/src/: edit.rs  lib.rs  lock.rs
crates/husako-core/: CHANGELOG.md  Cargo.toml
crates/husako-core/src/: lib.rs  lock_check.rs  plugin.rs  progress.rs  quantity.rs  schema_source.rs  validate.rs  version_check.rs
crates/husako-dts/: CHANGELOG.md  Cargo.toml
crates/husako-dts/src/: emitter.rs  json_schema.rs  lib.rs  schema.rs  schema_store.rs  validation.rs
crates/husako-dts/src/snapshots/: husako_dts__emitter__tests__emit_builder_class_snapshot.snap  husako_dts__emitter__tests__emit_builder_class_with_top_level_fields.snap  husako_dts__emitter__tests__emit_builder_class_without_spec.snap  husako_dts__emitter__tests__emit_common_snapshot.snap  husako_dts__emitter__tests__emit_group_version_js_snapshot.snap  husako_dts__emitter__tests__emit_group_version_js_with_top_level_fields.snap  husako_dts__emitter__tests__emit_group_version_snapshot.snap  husako_dts__emitter__tests__emit_interface_snapshot.snap  husako_dts__emitter__tests__schema_builder_dts.snap  husako_dts__emitter__tests__schema_builder_js.snap  husako_dts__json_schema__tests__chart_basic_dts.snap  husako_dts__json_schema__tests__chart_basic_js.snap  husako_dts__schema_store__tests__schema_store_json.snap  husako_dts__tests__apps_v1_dts.snap  husako_dts__tests__apps_v1_js.snap  husako_dts__tests__chains_dts.snap  husako_dts__tests__common_dts.snap  husako_dts__validation__tests__validation_json.snap
crates/husako-dts/tests/: real_specs.rs  ts_type_check.rs
crates/husako-dts/tests/fixtures/openapi/crds/cert-manager/: VERSION
crates/husako-dts/tests/fixtures/openapi/crds/cert-manager/apis/cert-manager.io/: v1.json
crates/husako-dts/tests/fixtures/openapi/crds/cnpg/: VERSION
crates/husako-dts/tests/fixtures/openapi/crds/cnpg/apis/postgresql.cnpg.io/: v1.json
crates/husako-dts/tests/fixtures/openapi/crds/fluxcd/: VERSION
crates/husako-dts/tests/fixtures/openapi/crds/fluxcd/apis/helm.toolkit.fluxcd.io/: v2.json
crates/husako-dts/tests/fixtures/openapi/crds/fluxcd/apis/kustomize.toolkit.fluxcd.io/: v1.json
crates/husako-dts/tests/fixtures/openapi/crds/fluxcd/apis/source.toolkit.fluxcd.io/: v1.json
crates/husako-dts/tests/fixtures/openapi/k8s/: VERSION
crates/husako-dts/tests/fixtures/openapi/k8s/api/: v1.json
crates/husako-dts/tests/fixtures/openapi/k8s/apis/apps/: v1.json
crates/husako-dts/tests/fixtures/openapi/k8s/apis/batch/: v1.json
crates/husako-dts/tests/fixtures/openapi/k8s/apis/networking.k8s.io/: v1.json
crates/husako-dts/tests/helpers/: mod.rs
crates/husako-helm/: Cargo.toml
crates/husako-helm/src/: artifacthub.rs  file.rs  git.rs  lib.rs  oci.rs  registry.rs
crates/husako-lsp/: Cargo.toml
crates/husako-lsp/src/: analysis.rs  completion.rs  diagnostics.rs  lib.rs  workspace.rs
crates/husako-openapi/: Cargo.toml
crates/husako-openapi/src/: cache.rs  crd.rs  fetch.rs  kubeconfig.rs  lib.rs  release.rs
crates/husako-runtime-qjs/: Cargo.toml
crates/husako-runtime-qjs/src/: lib.rs  loader.rs  resolver.rs
crates/husako-sdk/: Cargo.toml
crates/husako-yaml/: Cargo.toml
docs/: builder-spec.md  index.md  package-lock.json  package.json  versions.json
docs/.vitepress/: config.ts
docs/advanced/: benchmarks.md  helm.md  plugins.md
docs/guide/: configuration.md  getting-started.md  helm.md  templates.md  testing.md  writing-resources.md
docs/reference/: builder-api.md  cli.md  import-system.md  lsp.md
examples/: basic.ts  canonical.husako  canonical.ts
latest/: bench-report.md  bench-summary.md
scripts/: e2e.sh  sync-versions.sh
test/e2e/: entry.ts  (+7 more)
workflows/: audit.ts  bench.ts  check.ts  distribute.ts  docs-deploy.ts  docs-release.ts  sync-workflows.ts  version.ts
(+68 files in other folders)
