[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nanazt/husako"

[workspace.dependencies]
# Compilation
oxc_allocator = "0.114"
oxc_parser = "0.114"
oxc_transformer = "0.114"
oxc_codegen = "0.114"
oxc_span = "0.114"
oxc_semantic = "0.114"

# Runtime
rquickjs = { version = "0.11", features = ["bindgen", "loader"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
thiserror = "2"

# HTTP
reqwest = { version = "0.13", features = ["blocking", "json"] }

# Archive
flate2 = "1"
tar = "0.4"

# Dev
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
mockito = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
