[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
description = "Type-safe Kubernetes resource authoring in TypeScript"
repository = "https://github.com/nanazt/husako"

[workspace.dependencies]
# Compilation
oxc_allocator = "0.114"
oxc_parser = "0.114"
oxc_transformer = "0.114"
oxc_codegen = "0.114"
oxc_span = "0.114"
oxc_semantic = "0.114"

# Runtime
rquickjs = { version = "0.11", features = ["bindgen", "loader", "futures", "macro", "phf"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
fuzzy-matcher = "0.3"
console = "0.16"
crossterm = "0.28"
indicatif = "0.18"

# TOML editing
toml_edit = "0.25"

# Version comparison
semver = "1"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Errors
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# Archive
flate2 = "1"
tar = "0.4"

# Benchmarks
criterion = { version = "0.8", features = ["html_reports"] }

# Dev
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
mockito = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
