[package]
name = "husako"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
husako-config = { path = "../husako-config" }
husako-core = { path = "../husako-core" }
husako-openapi = { path = "../husako-openapi" }
husako-runtime-qjs = { path = "../husako-runtime-qjs" }
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
husako-dts = { path = "../husako-dts" }
predicates = "3"
insta.workspace = true
serde_json.workspace = true
tempfile.workspace = true
