[package]
name = "husako"
version = "0.1.0"
edition.workspace = true
description = "Type-safe Kubernetes resource authoring in TypeScript"
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
husako-config = { path = "../husako-config", version = "0" }
husako-core = { path = "../husako-core", version = "0" }
husako-openapi = { path = "../husako-openapi", version = "0" }
husako-runtime-qjs = { path = "../husako-runtime-qjs", version = "0" }
clap.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
fuzzy-matcher.workspace = true
console.workspace = true
indicatif.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
husako-dts = { path = "../husako-dts", version = "0" }
mockito.workspace = true
predicates = "3"
insta.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
tokio.workspace = true
