[package]
name = "husako-compile-oxc"
version = "0.1.0"
edition.workspace = true
description = "TypeScript to JavaScript compiler via oxc for husako"
license.workspace = true
repository.workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_transformer.workspace = true
oxc_codegen.workspace = true
oxc_span.workspace = true
oxc_semantic.workspace = true
thiserror.workspace = true
