[package]
name = "husako-config"
version.workspace = true
edition.workspace = true
description = "Project configuration parser for husako"
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
