[package]
name = "husako-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
husako-compile-oxc = { path = "../husako-compile-oxc" }
husako-config = { path = "../husako-config" }
husako-dts = { path = "../husako-dts" }
husako-helm = { path = "../husako-helm" }
husako-openapi = { path = "../husako-openapi" }
husako-runtime-qjs = { path = "../husako-runtime-qjs" }
husako-sdk = { path = "../husako-sdk" }
husako-yaml = { path = "../husako-yaml" }
regex-lite = "0.1"
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
thiserror.workspace = true
