[package]
name = "husako-dts"
version = "0.1.0"
edition.workspace = true
description = "TypeScript type definition generator for husako"
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
husako-core = { path = "../husako-core", version = "0" }
insta.workspace = true
serde_json = { workspace = true }
