[package]
name = "husako-helm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flate2.workspace = true
husako-config = { path = "../husako-config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
