[package]
name = "husako-helm"
version = "0.1.0"
edition.workspace = true
description = "Helm chart values schema resolver for husako"
license.workspace = true
repository.workspace = true

[dependencies]
flate2.workspace = true
husako-config = { path = "../husako-config", version = "0" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
