[package]
name = "husako-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for husako .husako files"
repository.workspace = true

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
notify.workspace = true

[dev-dependencies]
tokio.workspace = true
