[package]
name = "husako-openapi"
version.workspace = true
edition.workspace = true
description = "OpenAPI v3 spec fetcher and cache for husako"
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
