[package]
name = "husako-openapi"
version = "0.1.0"
edition.workspace = true
description = "OpenAPI v3 spec fetcher and cache for husako"
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
