[package]
name = "husako-runtime-qjs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
husako-compile-oxc = { path = "../husako-compile-oxc" }
rquickjs.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
